2008-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): Insure that 'set term foo' will always
	succeed if there is a terminal named "foo", even if there are also
	terminals named "foobaz" and "foodstuff".  Bugfix (svg/svga)

2008-02-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
        * src/wxterminal/wxt_gui.h:
        * src/wxterminal/wxt_term.h:
        * src/wxterminal/gp_cairo.c:
        * src/wxterminal/gp_cairo.h:
        * src/wxterminal/gp_cairo_term.h:
	* term/cairo.trm:
	* term/wxt.trm:
	Rework the cairo code for 'enhanced text' to make it more independant
	from the parsing code. Now the parser loop is directly in the terminals
	code, instead of being in gp_cairo.*. This is a preliminary work for
	wxt-as-a-separate-process. It has the advantage of killing some global
	variables in cairo code, although this particular aspect of the work is
	not complete. gp_cairo_term.h is now useless and removed.

2008-02-03  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (LoadCursor):
	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/icon16x16.xpm:
	* src/wxterminal/bitmaps/xpm/icon32x32.xpm:
	* src/wxterminal/bitmaps/xpm/icon64x64.xpm:
	* src/wxterminal/bitmaps/xpm/notfound.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Recent gcc versions are stricter with strings. Define xpm char arrays
	as const.

2008-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/hidden3d.c (draw_vertex):
	Remove cntr3d_dots() as a special case routine. Use cntr3d_points() to
	treat dots as pointtype 0. This allows hidden3d to handle dot surfaces.

2008-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c: More informative error message if the current plot
	style is not fully output to a table.
